# repo-agentic-index

./: .env.example  .gitignore  Agentic-Coding-Evaluation-Framework-v1.0.md  CLAUDE.md  Makefile  README.md  pyproject.toml
mock_server/: __init__.py  server.py
src/agentic_evaluator/: __init__.py  config.py  main.py
src/agentic_evaluator/agents/: __init__.py  dimension_agents.py  orchestrator.py
src/agentic_evaluator/skills/: __init__.py  code_analyzer.py  file_scanner.py  git_analyzer.py  lang_analyzer.py
