[project]
name = "agentic-evaluator"
version = "0.1.0"
description = "Multi-agent Agentic Coding Friendliness Evaluator based on the Repository Agentic-Readiness Scoring Framework v1.0"
requires-python = ">=3.11"
dependencies = [
    "pyautogen>=0.2.38",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "autogen-ext[openai]>=0.7.5",
]

[project.scripts]
evaluate = "agentic_evaluator.main:main"
mock-server = "mock_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_evaluator", "mock_server"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentic_evaluator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
